--- a/patrl.org
+++ b/patrl.org
@@ -231,6 +231,19 @@ Loads ~pandoc-mode~ when in ~markdown-mode~ automatically, and use ~pandoc~ as d
 (setq markdown-command "pandoc --smart - markdown -t html")
 #+end_src
 
+
+** Coding
+
+*** Haskell
+
+I use ~haskell-mode~ which has several options for indentation, as detailed in the documentation [[https://github.com/haskell/haskell-mode/wiki/Indentation][here]]. Uncomment the one you want, and remember to comment the rest. Use ~TAB~ to cycle through possible indent points with ~haskell-indent~ and ~haskell-indentation~.
+
+#+begin_src emacs-lisp
+;; (add-hook 'haskell-mode-hook 'turn-on-haskell-simple-indent)
+(add-hook 'haskell-mode-hook 'turn-on-haskell-indent)
+;; (add-hook 'haskell-mode-hook 'turn-on-haskell-indentation)
+#+end_src
+
 ** Utilities
 
 *** Smex
